# python-wg-node-client

./: .gitignore  README.md  pyproject.toml
wg_node_client/: __init__.py  wg_node_client.py
