
[project]
name = "wg-node-client"
version = "0.1.0"
description = ""
authors = [
    {name = "jieggii", email = "jieggii@protonmail.com"},
]
dependencies = [
    "rsa>=4.9",
    "aiohttp>=3.8.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.3.0",
]

[tool.pdm.scripts]
fmt.shell = "isort ./wg_node_client/ && black ./wg_node_client/"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
